--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: consulta_saldo_transcaribe
 description: Aplicación Flutter para consultar saldo de tarjeta Transcaribe.
-publish_to: 'none' # No se publicará en pub.dev
+publish_to: 'none' # No se publicará en pub.devdwqdqwdqd
 
 version: 1.0.0+1
 
